crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_u000c_gen_1.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"</\f\"####)"
---
[
    Token {
        data: "\u{c}",
        attrs: None,
        kind: Comment,
        is_implied: false,
    },
    Token {
        data: "",
        attrs: None,
        kind: CommentEnd,
        is_implied: false,
    },
]
