crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_y_gt_gen_3.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<y>\"####)"
---
[
    Token {
        data: "y",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "y",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
